Fixup warnings due to deprecated URL constructor (in WebKit)
Includes adding a handful of new tests for the code that this
modifies to cover all the special cases.

The new tests are Linux only, but they could be adapted to test
these error conditions on other platforms.